tinkering with css to address flickering issue

--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -1,3 +1,5 @@
+/* mle 2012-01-01 change rem to em to avoid flickring on ios browsers in landscape
+
 /*
  *  ___
  * /\_ \
@@ -48,7 +50,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "PT Sans", Helvetica, Arial, sans-serif;
   font-weight: 400;
   color: #313131;
-  letter-spacing: -.025rem;
+  letter-spacing: -.025em;
 }
 
 
@@ -73,16 +75,16 @@ h1, h2, h3, h4, h5, h6 {
  */
 
 .container {
-  max-width: 28rem;
+  max-width: 28em;
 }
-@media (min-width: 38rem) {
+@media (min-width: 38em) {
   .container {
-    max-width: 32rem;
+    max-width: 32em;
   }
 }
-@media (min-width: 56rem) {
+@media (min-width: 56em) {
   .container {
-    max-width: 38rem;
+    max-width: 38em;
   }
 }
 
@@ -94,9 +96,9 @@ h1, h2, h3, h4, h5, h6 {
  */
 
 .masthead {
-  padding-top:    1rem;
-  padding-bottom: 1rem;
-  margin-bottom: 3rem;
+  padding-top:    1em;
+  padding-bottom: 1em;
+  margin-bottom: 3em;
   border-bottom: 1px solid #eee;
 }
 .masthead-title {
@@ -114,7 +116,7 @@ h1, h2, h3, h4, h5, h6 {
   letter-spacing: 0;
 }
 
-@media (max-width: 48rem) {
+@media (max-width: 48em) {
   .masthead-title {
     text-align: center;
   }
@@ -144,20 +146,20 @@ h1, h2, h3, h4, h5, h6 {
   position: fixed;
   top: 0;
   bottom: 0;
-  left: -14rem;
-  width: 14rem;
+  left: -14em;
+  width: 14em;
   visibility: hidden;
   overflow-y: auto;
   font-family: "PT Sans", Helvetica, Arial, sans-serif;
-  font-size: .875rem; /* 15px */
+  font-size: .875em; /* 15px */
   color: rgba(255,255,255,.6);
   background-color: #202020;
   -webkit-transition: all .3s ease-in-out;
           transition: all .3s ease-in-out;
 }
-@media (min-width: 30rem) {
+@media (min-width: 30em) {
   .sidebar {
-    font-size: .75rem; /* 14px */
+    font-size: .75em; /* 14px */
   }
 }
 
@@ -167,7 +169,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #fff;
 }
 .sidebar-item {
-  padding: 1rem;
+  padding: 1em;
 }
 .sidebar-item p:last-child {
   margin-bottom: 0;
@@ -179,7 +181,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 .sidebar-nav-item {
   display: block;
-  padding: .5rem 1rem;
+  padding: .5em 1em;
   border-top: 1px solid rgba(255,255,255,.1);
 }
 .sidebar-nav-item.active,
@@ -190,13 +192,13 @@ a.sidebar-nav-item:focus {
   border-color: transparent;
 }
 
-@media (min-width: 48rem) {
+@media (min-width: 48em) {
   .sidebar-item {
-    padding: 1.5rem;
+    padding: 1.5em;
   }
   .sidebar-nav-item {
-    padding-left:  1.5rem;
-    padding-right: 1.5rem;
+    padding-left:  1.5em;
+    padding-right: 1.5em;
   }
 }
 
@@ -208,11 +210,11 @@ a.sidebar-nav-item:focus {
 /* Style the `label` that we use to target the `.sidebar-checkbox` */
 .sidebar-toggle {
   position: absolute;
-  top:  1rem;
-  left: 1rem;
+  top:  1em;
+  left: 1em;
   display: block;
-  width: 2.2rem;
-  padding: .5rem .65rem;
+  width: 2.2em;
+  padding: .5em .65em;
   color: #505050;
   background-color: #fff;
   border-radius: 4px;
@@ -222,9 +224,9 @@ a.sidebar-nav-item:focus {
   display: block;
   content: "";
   width: 100%;
-  padding-bottom: .125rem;
-  border-top: .375rem double;
-  border-bottom: .125rem solid;
+  padding-bottom: .125em;
+  border-top: .375em double;
+  border-bottom: .125em solid;
 
   /* Make the border inside the box */
   -webkit-box-sizing: border-box;
@@ -238,15 +240,15 @@ a.sidebar-nav-item:focus {
   background-color: #505050;
 }
 
-@media (min-width: 30.1rem) {
+@media (min-width: 30.1em) {
   .sidebar-toggle {
     position: fixed;
-    width: 2.25rem;
+    width: 2.25em;
   }
   .sidebar-toggle:before {
-    padding-bottom: .15rem;
-    border-top-width: .45rem;
-    border-bottom-width: .15rem;
+    padding-bottom: .15em;
+    border-top-width: .45em;
+    border-bottom-width: .15em;
   }
 }
 
@@ -283,9 +285,9 @@ a.sidebar-nav-item:focus {
 #sidebar-checkbox:checked ~ .sidebar,
 #sidebar-checkbox:checked ~ .wrap,
 #sidebar-checkbox:checked ~ .sidebar-toggle {
-  -webkit-transform: translateX(14rem);
-      -ms-transform: translateX(14rem);
-          transform: translateX(14rem);
+  -webkit-transform: translateX(14em);
+      -ms-transform: translateX(14em);
+          transform: translateX(14em);
 }
 
 
@@ -315,15 +317,15 @@ a.sidebar-nav-item:focus {
 /* Meta data line below post title */
 .post-date {
   display: block;
-  margin-top: -.5rem;
-  margin-bottom: 1rem;
+  margin-top: -.5em;
+  margin-bottom: 1em;
   color: #9a9a9a;
 }
 
 /* Related posts */
 .related {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+  padding-top: 2em;
+  padding-bottom: 2em;
   border-top: 1px solid #eee;
 }
 .related-posts {
@@ -355,8 +357,8 @@ a.sidebar-nav-item:focus {
 
 .pagination {
   overflow: hidden; /* clearfix */
-  margin-left: -1rem;
-  margin-right: -1rem;
+  margin-left: -1em;
+  margin-right: -1em;
   font-family: "PT Sans", Helvetica, Arial, sans-serif;
   color: #ccc;
   text-align: center;
@@ -365,7 +367,7 @@ a.sidebar-nav-item:focus {
 /* Pagination items can be `span`s or `a`s */
 .pagination-item {
   display: block;
-  padding: 1rem;
+  padding: 1em;
   border: 1px solid #eee;
 }
 .pagination-item:first-child {
@@ -377,9 +379,9 @@ a.pagination-item:hover {
   background-color: #f5f5f5;
 }
 
-@media (min-width: 30rem) {
+@media (min-width: 30em) {
   .pagination {
-    margin: 3rem 0;
+    margin: 3em 0;
   }
   .pagination-item {
     float: left;
@@ -407,19 +409,19 @@ a.pagination-item:hover {
 
 .layout-reverse .sidebar {
   left: auto;
-  right: -14rem;
+  right: -14em;
 }
 .layout-reverse .sidebar-toggle {
   left: auto;
-  right: 1rem;
+  right: 1em;
 }
 
 .layout-reverse #sidebar-checkbox:checked ~ .sidebar,
 .layout-reverse #sidebar-checkbox:checked ~ .wrap,
 .layout-reverse #sidebar-checkbox:checked ~ .sidebar-toggle {
-  -webkit-transform: translateX(-14rem);
-      -ms-transform: translateX(-14rem);
-          transform: translateX(-14rem);
+  -webkit-transform: translateX(-14em);
+      -ms-transform: translateX(-14em);
+          transform: translateX(-14em);
 }
 
 
